# vjepa-demo

./: .gitignore  app.py  pyproject.toml
src/: __init__.py  model.py  predictor.py
